@@ -15,8 +15,6 @@
 #define	HOT_VERSION_MID		5
 #define	HOT_VERSION_MIN		4
 #define	HOT_VERSION_REL_DATE	"2012-06-02"
-#define	HOT_VERSION_BETA	0
-#define	HOT_VERSION_BETA_STR	"final"
 #define	HOT_VERSION_STR		STRINGIFY(HOT_VERSION_MAJ) "." STRINGIFY(HOT_VERSION_MID) "." STRINGIFY(HOT_VERSION_MIN)
 #define	GLQUAKE_VERSION		1.00
 #define	ENGINE_VERSION		1.26
