@@ -516,11 +516,7 @@ static void Sys_CheckSDL (void)
 
 static void PrintVersion (void)
 {
-#if HOT_VERSION_BETA
-	Sys_Printf ("Hammer of Thyrion, %s-%s (%s) pre-release\n", HOT_VERSION_STR, HOT_VERSION_BETA_STR, HOT_VERSION_REL_DATE);
-#else
 	Sys_Printf ("Hammer of Thyrion, release %s (%s)\n", HOT_VERSION_STR, HOT_VERSION_REL_DATE);
-#endif
 	Sys_Printf ("running on %s engine %4.2f (%s)\n", ENGINE_NAME, ENGINE_VERSION, PLATFORM_STRING);
 	Sys_Printf ("More info / sending bug reports:  http://uhexen2.sourceforge.net\n");
 }
